<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoleAssignmentActivity">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/role_assignment_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        app:tabGravity="fill"
        app:tabIndicatorColor="@android:color/black"
        app:tabIndicatorHeight="4dp"
        app:tabBackground="@color/colorPrimary"
        app:tabMode="fixed"/>
    <LinearLayout
        android:layout_below="@id/role_assignment_tab_layout"
        android:orientation="horizontal"
        android:id="@+id/role_assignment_labels_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/role_assignment_label_role_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/priority"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <androidx.viewpager.widget.ViewPager
        android:layout_below="@id/role_assignment_labels_layout"
        android:id="@+id/role_assignment_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/submit_roles_btn"/>
    <Button
        android:id="@+id/submit_roles_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_black_filled"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorPrimary"
        android:text="@string/submit"/>
</RelativeLayout>