<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:animateLayoutChanges="true"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:paddingBottom="100dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:text="@string/starter_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Switch
            android:id="@+id/starter_player_random_switch"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/define_starter_randomly"/>
        <RelativeLayout
            android:id="@+id/starter_player_manually_layout"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_toStartOf="@id/starter_player_et"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/define_starter_manually"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                />
            <EditText
                android:id="@+id/starter_player_et"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_start_game"
                android:gravity="center"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="20dp"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <TextView
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:text="@string/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                />
            <Spinner
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/settings_language_spinner"
                style="@style/Widget.AppCompat.Spinner"
                android:dropDownVerticalOffset="10dp"
                android:popupElevation="3dp"
                android:entries="@array/languages"
                android:background="@drawable/bg_start_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:text="@string/define_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/round_starts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/setting_round_start_spinner"
                android:padding="10dp"
                android:entries="@array/timeset"
                android:background="@drawable/bg_start_game"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/day"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/define_round_day_et"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_start_game"
                android:gravity="center"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="20dp"
                android:layout_alignParentEnd="true"
                />
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/night"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/define_round_night_et"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_start_game"
                android:gravity="center"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="20dp"
                android:layout_alignParentEnd="true"
                />
        </LinearLayout>
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="5dp"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_god_ability_label"/>
            <FrameLayout
                android:layout_weight="1"

                android:id="@+id/settings_god_ability_btn"
                android:background="@drawable/bg_start_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/settings_god_ability_txt"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:text="@string/add_role_ability_picker" />
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="30dp"
                android:text="@string/settings_common_ability_label"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <FrameLayout
                android:layout_weight="1"
                android:id="@+id/settings_common_ability_btn"
                android:background="@drawable/bg_start_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/settings_common_ability_txt"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:text="@string/add_role_ability_picker" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/submit_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_submit_foreground"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@android:color/white"
        />
</RelativeLayout>